@@ -8,7 +8,7 @@
 <?php
         $url = "add_comment.php?set_albumName={$gallery->album->fields['name']}&index=$index";
         $buf = "<span class=editlink>";
-	$buf .= '<a href="#" onClick="' . popup($url) . '">[' . _("add comment") .']</a>';
+	$buf .= '<a href="#" onClick="javascript:' . popup($url) . '">[' . _("add comment") .']</a>';
         $buf .= "</span>";
         echo "<br>$buf<br>";
 ?>
