@@ -1,3 +1,15 @@
+2003-09-28  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b107
+
+	* Migrated "admin options" in view_album.php into a drop-down menu.
+
+	* Functions popup() and popup_js() (in util.php) now return
+	  JavaScript code without "javascript:" prepended to it.
+	
+	* Added function testRequirement() to util.php to simplify testing of
+	  common boolean conditions.
+	
+	* Removed PHP notice from reset_votes.php.
+	
 2003-09-27 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b106
 	
 	* Don't display border when displaying frames.
